--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -4,23 +4,10 @@ on:
   push
 
 jobs:
-  test_code:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out repository code
-        uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-            python-version: '3.11'
-      - name: install python dependencies
-        run: pip install --upgrade pip && pip install -r requirements.txt
-      - name: unit test code
-        run: python -m pytest tests
+  # Should we run anything else before deploying?
 
   deploy_dev:
     runs-on: ubuntu-latest
-    needs: test_code
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
